--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -569,6 +569,15 @@ spec:
                               user:
                                 type: string
                             type: object
+                          seccompProfile:
+                            properties:
+                              localhostProfile:
+                                type: string
+                              type:
+                                type: string
+                            required:
+                            - type
+                            type: object
                           windowsOptions:
                             properties:
                               gmsaCredentialSpec:
@@ -750,6 +759,15 @@ spec:
                           type: string
                         user:
                           type: string
+                      type: object
+                    seccompProfile:
+                      properties:
+                        localhostProfile:
+                          type: string
+                        type:
+                          type: string
+                      required:
+                      - type
                       type: object
                     supplementalGroups:
                       items:
@@ -974,6 +992,77 @@ spec:
                             type: string
                           sizeLimit:
                             type: string
+                        type: object
+                      ephemeral:
+                        properties:
+                          readOnly:
+                            type: boolean
+                          volumeClaimTemplate:
+                            properties:
+                              metadata:
+                                type: object
+                              spec:
+                                properties:
+                                  accessModes:
+                                    items:
+                                      type: string
+                                    type: array
+                                  dataSource:
+                                    properties:
+                                      apiGroup:
+                                        type: string
+                                      kind:
+                                        type: string
+                                      name:
+                                        type: string
+                                    required:
+                                    - kind
+                                    - name
+                                    type: object
+                                  resources:
+                                    properties:
+                                      limits:
+                                        additionalProperties:
+                                          type: string
+                                        type: object
+                                      requests:
+                                        additionalProperties:
+                                          type: string
+                                        type: object
+                                    type: object
+                                  selector:
+                                    properties:
+                                      matchExpressions:
+                                        items:
+                                          properties:
+                                            key:
+                                              type: string
+                                            operator:
+                                              type: string
+                                            values:
+                                              items:
+                                                type: string
+                                              type: array
+                                          required:
+                                          - key
+                                          - operator
+                                          type: object
+                                        type: array
+                                      matchLabels:
+                                        additionalProperties:
+                                          type: string
+                                        type: object
+                                    type: object
+                                  storageClassName:
+                                    type: string
+                                  volumeMode:
+                                    type: string
+                                  volumeName:
+                                    type: string
+                                type: object
+                            required:
+                            - spec
+                            type: object
                         type: object
                       fc:
                         properties:
@@ -1245,8 +1334,6 @@ spec:
                                   type: object
                               type: object
                             type: array
-                        required:
-                        - sources
                         type: object
                       quobyte:
                         properties:
@@ -1819,6 +1906,15 @@ spec:
                               user:
                                 type: string
                             type: object
+                          seccompProfile:
+                            properties:
+                              localhostProfile:
+                                type: string
+                              type:
+                                type: string
+                            required:
+                            - type
+                            type: object
                           windowsOptions:
                             properties:
                               gmsaCredentialSpec:
@@ -2013,6 +2109,15 @@ spec:
                           type: string
                         user:
                           type: string
+                      type: object
+                    seccompProfile:
+                      properties:
+                        localhostProfile:
+                          type: string
+                        type:
+                          type: string
+                      required:
+                      - type
                       type: object
                     supplementalGroups:
                       items:
@@ -2437,6 +2542,15 @@ spec:
                                 type: string
                               user:
                                 type: string
+                            type: object
+                          seccompProfile:
+                            properties:
+                              localhostProfile:
+                                type: string
+                              type:
+                                type: string
+                            required:
+                            - type
                             type: object
                           windowsOptions:
                             properties:
@@ -2877,6 +2991,77 @@ spec:
                           sizeLimit:
                             type: string
                         type: object
+                      ephemeral:
+                        properties:
+                          readOnly:
+                            type: boolean
+                          volumeClaimTemplate:
+                            properties:
+                              metadata:
+                                type: object
+                              spec:
+                                properties:
+                                  accessModes:
+                                    items:
+                                      type: string
+                                    type: array
+                                  dataSource:
+                                    properties:
+                                      apiGroup:
+                                        type: string
+                                      kind:
+                                        type: string
+                                      name:
+                                        type: string
+                                    required:
+                                    - kind
+                                    - name
+                                    type: object
+                                  resources:
+                                    properties:
+                                      limits:
+                                        additionalProperties:
+                                          type: string
+                                        type: object
+                                      requests:
+                                        additionalProperties:
+                                          type: string
+                                        type: object
+                                    type: object
+                                  selector:
+                                    properties:
+                                      matchExpressions:
+                                        items:
+                                          properties:
+                                            key:
+                                              type: string
+                                            operator:
+                                              type: string
+                                            values:
+                                              items:
+                                                type: string
+                                              type: array
+                                          required:
+                                          - key
+                                          - operator
+                                          type: object
+                                        type: array
+                                      matchLabels:
+                                        additionalProperties:
+                                          type: string
+                                        type: object
+                                    type: object
+                                  storageClassName:
+                                    type: string
+                                  volumeMode:
+                                    type: string
+                                  volumeName:
+                                    type: string
+                                type: object
+                            required:
+                            - spec
+                            type: object
+                        type: object
                       fc:
                         properties:
                           fsType:
@@ -3147,8 +3332,6 @@ spec:
                                   type: object
                               type: object
                             type: array
-                        required:
-                        - sources
                         type: object
                       quobyte:
                         properties:
@@ -3716,6 +3899,15 @@ spec:
                               user:
                                 type: string
                             type: object
+                          seccompProfile:
+                            properties:
+                              localhostProfile:
+                                type: string
+                              type:
+                                type: string
+                            required:
+                            - type
+                            type: object
                           windowsOptions:
                             properties:
                               gmsaCredentialSpec:
@@ -3907,6 +4099,15 @@ spec:
                           type: string
                         user:
                           type: string
+                      type: object
+                    seccompProfile:
+                      properties:
+                        localhostProfile:
+                          type: string
+                        type:
+                          type: string
+                      required:
+                      - type
                       type: object
                     supplementalGroups:
                       items:
@@ -4331,6 +4532,15 @@ spec:
                                 type: string
                               user:
                                 type: string
+                            type: object
+                          seccompProfile:
+                            properties:
+                              localhostProfile:
+                                type: string
+                              type:
+                                type: string
+                            required:
+                            - type
                             type: object
                           windowsOptions:
                             properties:
@@ -4771,6 +4981,77 @@ spec:
                           sizeLimit:
                             type: string
                         type: object
+                      ephemeral:
+                        properties:
+                          readOnly:
+                            type: boolean
+                          volumeClaimTemplate:
+                            properties:
+                              metadata:
+                                type: object
+                              spec:
+                                properties:
+                                  accessModes:
+                                    items:
+                                      type: string
+                                    type: array
+                                  dataSource:
+                                    properties:
+                                      apiGroup:
+                                        type: string
+                                      kind:
+                                        type: string
+                                      name:
+                                        type: string
+                                    required:
+                                    - kind
+                                    - name
+                                    type: object
+                                  resources:
+                                    properties:
+                                      limits:
+                                        additionalProperties:
+                                          type: string
+                                        type: object
+                                      requests:
+                                        additionalProperties:
+                                          type: string
+                                        type: object
+                                    type: object
+                                  selector:
+                                    properties:
+                                      matchExpressions:
+                                        items:
+                                          properties:
+                                            key:
+                                              type: string
+                                            operator:
+                                              type: string
+                                            values:
+                                              items:
+                                                type: string
+                                              type: array
+                                          required:
+                                          - key
+                                          - operator
+                                          type: object
+                                        type: array
+                                      matchLabels:
+                                        additionalProperties:
+                                          type: string
+                                        type: object
+                                    type: object
+                                  storageClassName:
+                                    type: string
+                                  volumeMode:
+                                    type: string
+                                  volumeName:
+                                    type: string
+                                type: object
+                            required:
+                            - spec
+                            type: object
+                        type: object
                       fc:
                         properties:
                           fsType:
@@ -5041,8 +5322,6 @@ spec:
                                   type: object
                               type: object
                             type: array
-                        required:
-                        - sources
                         type: object
                       quobyte:
                         properties:
