--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -16,18 +16,19 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/flinkoperator.k8s.io_flinkclusters.yaml
+    - bases/flinkoperator.k8s.io_flinkclusters.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
-# [WEBHOOK] patches here are for enabling the conversion webhook for each CRD
-#- patches/webhook_in_flinkclusters.yaml
-# +kubebuilder:scaffold:crdkustomizewebhookpatch
+    # [WEBHOOK] patches here are for enabling the conversion webhook for each CRD
+    #- patches/webhook_in_flinkclusters.yaml
+    # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
-# [CAINJECTION] patches here are for enabling the CA injection for each CRD
-#- patches/cainjection_in_flinkclusters.yaml
-# +kubebuilder:scaffold:crdkustomizecainjectionpatch
+    # [CAINJECTION] patches here are for enabling the CA injection for each CRD
+    #- patches/cainjection_in_flinkclusters.yaml
+    # +kubebuilder:scaffold:crdkustomizecainjectionpatch
+    - patches/crd_protection.yaml
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
-- kustomizeconfig.yaml
+    - kustomizeconfig.yaml
