--- a/config/webhook/kustomization.yaml
+++ b/config/webhook/kustomization.yaml
@@ -13,8 +13,8 @@
 # limitations under the License.
 
 resources:
-- manifests.yaml
-- service.yaml
+    - service.yaml
+    - manifests.v1beta1.yaml
 
 configurations:
-- kustomizeconfig.yaml
+    - kustomizeconfig.yaml
