--- a/config/default/manager_image_patch.template
+++ b/config/default/manager_image_patch.template
@@ -22,5 +22,5 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your operator image URL
-      - image: gcr.io/flink-operator/flink-operator:latest
+      - image: ghcr.io/spotify/flink-operator:latest
         name: flink-operator
