--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Prepare
         id: prep
         run: |
+          echo ${GITHUB_REF}
           echo ::set-output name=image::${DOCKER_REPO}:${GITHUB_REF/refs\/tags\//}
       - name: Login to Github container registry
         uses: docker/login-action@v1.1.1
