--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,8 @@ name: Publish Docker image
 on:
   release:
     types: [published]
+  push:
+    tags: ["v*"]
 jobs:
   push_to_registry:
     name: Push Docker image to GitHub Packages
