--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: Publish Docker image
 on:
-  release:
-    types: [published]
+  push:
+    tags: ["v*"]
 jobs:
   push_to_registry:
     name: Push Docker image to GitHub Packages
@@ -14,7 +14,6 @@ jobs:
       - name: Prepare
         id: prep
         run: |
-          echo ${GITHUB_REF}
           echo ::set-output name=image::${DOCKER_REPO}:${GITHUB_REF/refs\/tags\//}
       - name: Login to Github container registry
         uses: docker/login-action@v1.1.1
