--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -724,6 +724,8 @@ spec:
                     type: array
                   jarFile:
                     type: string
+                  mode:
+                    type: string
                   noLoggingToStdout:
                     type: boolean
                   parallelism:
