--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -4,7 +4,6 @@ metadata:
   annotations:
     api-approved.kubernetes.io: unapproved
     controller-gen.kubebuilder.io/version: v0.5.1-0.20210408091555-18885b17ff7b
-  creationTimestamp: null
   name: flinkclusters.flinkoperator.k8s.io
 spec:
   group: flinkoperator.k8s.io
@@ -724,6 +723,8 @@ spec:
                       type: object
                     type: array
                   jarFile:
+                    type: string
+                  mode:
                     type: string
                   noLoggingToStdout:
                     type: boolean
