Add failure reason

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -5785,6 +5785,10 @@ spec:
                       completionTime:
                         format: date-time
                         type: string
+                      failureReasons:
+                        items:
+                          type: string
+                        type: array
                       fromSavepoint:
                         type: string
                       id:
