Add flink job name to job status

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -5850,6 +5850,8 @@ spec:
                         type: string
                       state:
                         type: string
+                      submitterName:
+                        type: string
                     required:
                     - state
                     type: object
