--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -27,5 +27,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
   - name: controller
-    newName: gcr.io/spotify-live-wire/flink-project-operator
+    newName: controller
     newTag: latest
