--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,5 +6,7 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - name: Build image
-        run: make operator-image
+      - uses: actions/setup-go@v2
+        with:
+          go-version: "^1.17"
+      - run: make docker-build
