Fix deploy compat with previous release

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -40,10 +40,10 @@ spec:
         app: flink-operator
     spec:
       securityContext:
-        runAsNonRoot: true
+        runAsNonRoot: false
       containers:
         - command:
-            - /manager
+            - /flink-operator
           args:
             - --enable-leader-election
           image: controller:latest
