--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,10 +25,14 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: "^1.17"
-      - run: make docker-push
+      - run: make release-manifest docker-push
         env:
           IMG: ${{ steps.prep.outputs.image }}
       - name: Tag latest
         run: docker tag ${{ steps.prep.outputs.image }} ${DOCKER_REPO}:latest
       - name: Push latest
         run: docker push ${DOCKER_REPO}:latest
+      - name: Push release manifest
+        uses: softprops/action-gh-release@v1
+        with:
+          files: deploy/flink-operator.yaml
